# christojolly23-Laura-Ctaskts1

./: CMakeLists.txt
CLionProjects/Chapter 2 Project1/: CMakeLists.txt
CLionProjects/Pathway2maybelesson1/: CMakeLists.txt
CLionProjects/Pathway2maybelesson1/Pathway2Chapter2 Task2/: CMakeLists.txt  main.c
Chapter2Pathway2SwitchCase/: CMakeLists.txt  main.c
Ticket Program/: CMakeLists.txt  main.c
Uk_size_converter_hw/: CMakeLists.txt  main.c
