cmake_minimum_required(VERSION 3.26)
project(christojolly23_Laura_Ctaskts1 C)

set(CMAKE_C_STANDARD 11)

add_executable(christojolly23_Laura_Ctaskts1
        "CLionProjects/Chapter 2 Project1/main.c"
        CLionProjects/Pathway2maybelesson1/main.c
        CLionProjects/untitled/main.c
        "Ticket Program/main.c")
